<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chooseSuitLayout"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/chooseRankText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/choose_rank"
        android:textColor="#000000"
        android:textSize="16sp" >
    </TextView>

    <Spinner
        android:id="@+id/rankSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <TextView
        android:id="@+id/chooseSuitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/choose_suit"
        android:textColor="#000000"
        android:textSize="16sp" >
    </TextView>

    <Spinner
        android:id="@+id/suitSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/ok" >
    </Button>

</LinearLayout>